# digdigdig

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  TROUBLESHOOTING.md  pipeline.ps1  pyproject.toml
.github/workflows/: build-macos.yml
config/: sldl.conf
ddd/: __init__.py  __main__.py  cli.py  gui.py  gui_theme.py  paths.py
ddd/assets/models/: NOTICE.txt
ddd/core/: __init__.py  _logo.py  audioml.py  audit.py  config.py  detect.py  fsutil.py  genre.py  identify.py  naming.py  organize.py  quality.py  rename.py  scan.py  singleton.py  soulseek.py  stores.py  tokenize.py  trash.py  updates.py  upgrade.py
ddd/core/scrapers/: __init__.py  bandcamp.py  discogs.py  djset.py
docker/: README.md
docs/: index.html
lib/: audit-staging.ps1  clean-staging.ps1  convert-csv.ps1  retry-fakes.ps1  route-files.ps1
lib/scrapers/: bandcamp.py  discogs.py
packaging/: README.md  build.ps1  ddd.spec  entry.py
tests/: test_cjk_paths.py  test_cli_sort.py  test_detect.py  test_detect_wiring.py  test_djset_parse.py  test_exe_safety.py  test_genre_lookup.py  test_golden_corpus.py  test_gui_build.py  test_gui_checkbox_select.py  test_gui_window_center.py  test_identify.py  test_naming_display.py  test_organize_logic.py  test_organize_mapping.py  test_quality.py  test_rename_logic.py  test_resolve_name.py  test_scan_merge.py  test_singleton.py  test_soulseek_fatal.py  test_soulseek_listen_port.py  test_soulseek_nowindow.py  test_soulseek_staging.py  test_stores.py  test_updates.py  test_upgrade_forced.py  test_upgrade_logic.py  test_wma_tags.py
